--- a/widgets.html
+++ b/widgets.html
@@ -1,8 +1,50 @@
+﻿<!--
+// ******************************************************************************************
+//     Name:                    index.html
+//     Assembly:                Budget Execution
+//     Author:                  Terry D. Eppler
+//     Created:                 03-24-2023
+// 
+//     Last Modified By:        Terry D. Eppler
+//     Last Modified On:        05-31-2023
+// ******************************************************************************************
+// <copyright file="index.html" company="Terry Eppler">
+//    This is a Federal Budget, Finance, and Accounting application for the
+//    US Environmental Protection Agency (US EPA).
+//    Copyright ©  2023  Terry Eppler
+// 
+//    Permission is hereby granted, free of charge, to any person obtaining a copy
+//    of this software and associated documentation files (the “Software”),
+//    to deal in the Software without restriction,
+//    including without limitation the rights to use,
+//    copy, modify, merge, publish, distribute, sublicense,
+//    and/or sell copies of the Software,
+//    and to permit persons to whom the Software is furnished to do so,
+//    subject to the following conditions:
+// 
+//    The above copyright notice and this permission notice shall be included in all
+//    copies or substantial portions of the Software.
+// 
+//    THE SOFTWARE IS PROVIDED “AS IS”, WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED,
+//    INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
+//    FITNESS FOR A PARTICULAR PURPOSE AND NON-INFRINGEMENT.
+//    IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM,
+//    DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE,
+//    ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER
+//    DEALINGS IN THE SOFTWARE.
+// 
+//    You can contact me at:  terryeppler@gmail.com or eppler.terry@epa.gov
+// </copyright>
+// <summary>
+//  index.html
+// </summary>
+// ***************************************************************************************** 
+-->
 <!doctype html>
 <html>
 
 <head>
-    <title>Project Title</title>
+    <title>Budget Execution</title>
     <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" media="screen" rel="stylesheet" type="text/css"/>
     <link href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/themes/base/jquery-ui.css" media="screen" rel="stylesheet" type="text/css"/>
@@ -176,7 +218,7 @@
         </div>
         <div id="share-dialog" title="Share" data-role="none">
             <p>Copy the following link and share it with others:</p>
-            <input id="share-url" class="custom-textbox" type="text" autofocus="autofocus" value="https://yenchiah.github.io/project-website-template/" readonly>
+            <input id="share-url" class="custom-textbox" type="text" autofocus="autofocus" value="https://github.com/KarmaScripter/BudgetWeb/" readonly>
             <p id="share-url-copy-prompt">The share link is copied.</p>
         </div>
     </div>
@@ -186,7 +228,7 @@
 <!--Start Unsplash Photo Picker-->
 <div class="flex-row">
     <div class="flex-item flex-column">
-        <h2>Unsplash Photo Picker</h2>
+        <h2>UnSplash Photo Picker</h2>
         <hr>
         <p class="text">
             Ma quande lingues coalesce, li grammatica del resultant lingue es plu simplic e regulari quam ti del
@@ -195,7 +237,7 @@
             simplificat Angles, quam un skeptic Cambridge amico dit me.
         </p>
         <div class="custom-survey add-top-margin add-bottom-margin" id="create-vision">
-            <span class="text">1. Please click on the following image to choose a photo obtained from the Unsplash application:</span>
+            <span class="text">1. Please click on the following image to choose a photo obtained from the UnSplash application:</span>
             <a id="vision-image-frame" class="painting-frame" href="javascript:void(0)" style="margin-top: 25px;">
                 <div class="painting-frame-item">
                     <img id="vision-image" class="painting-frame-image" style="max-height: 300px;" src="img/choose-image.png">
@@ -379,7 +421,7 @@
                     <li><span style="background:#6aeec1;"></span>Mango</li>
                     <li><span style="background:#ec8a27;"></span>Watermelon</li>
                 </ul>
-                <div class="legend-source">Source: <a target="_blank" href="https://github.com/yenchiah/project-website-template">GitHub</a></div>
+                <div class="legend-source">Source: <a target="_blank" href="https://github.com/KarmaScripter/BudgetWeb">GitHub</a></div>
             </div>
         </div>
         <div class="custom-legend noselect" style="width: 210px" id="custom-legend">
@@ -391,7 +433,7 @@
                     <li><span style="background:#6aeec1;"></span>Mango</li>
                     <li><span style="background:#ec8a27;"></span>Watermelon</li>
                 </ul>
-                <div class="legend-source">Source: <a target="_blank" href="https://github.com/yenchiah/project-website-template">GitHub</a></div>
+                <div class="legend-source">Source: <a target="_blank" href="https://github.com/KarmaScripter/BudgetWeb">GitHub</a></div>
             </div>
         </div>
         <p class="text">
