--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
 // ***************************************************************************************** 
 -->
 <!doctype html>
+<!--suppress ALL -->
 <html>
 
 <head>
@@ -69,7 +70,7 @@
 <body>
 <div class="menu-container"></div>
 <div class="content-container">
-<!------------------------------------------------------------------------------------------------------------------------------------->
+<!------------------------------------------------------------------------------------------------->
 <!--Start Header-->
 <div class="banner" style="background: url( 'img/dummy-background.jpeg' ) no-repeat center; background-size: cover; height: 300px;"></div>
 <div class="banner">
@@ -86,10 +87,12 @@
     </div>
 </div>
 <!--End Header-->
-<!------------------------------------------------------------------------------------------------------------------------------------->
+
+<!------------------------------------------------------------------------------------------------->
 <div class="content">
 <div class="content-table flex-column">
-<!------------------------------------------------------------------------------------------------------------------------------------->
+
+<!------------------------------------------------------------------------------------------------->
 <!--Start Intro-->
 <div class="flex-row">
     <div class="flex-column flex-item">
@@ -163,8 +166,10 @@
     </div>
 </div>
 <!--End Intro-->
-<!------------------------------------------------------------------------------------------------------------------------------------->
-<!------------------------------------------------------------------------------------------------------------------------------------->
+
+<!------------------------------------------------------------------------------------------------->
+
+<!------------------------------------------------------------------------------------------------->
 <!--Start Text Only-->
 <div class="flex-row">
     <div class="flex-column flex-item">
@@ -264,7 +269,8 @@
     </div>
 </div>
 <!--End Text Only-->
-<!------------------------------------------------------------------------------------------------------------------------------------->
+
+<!------------------------------------------------------------------------------------------------->
 <!--Start Text with Buttons-->
 <div class="flex-row">
     <div class="flex-column flex-item">
@@ -280,7 +286,7 @@
             <button class="custom-button custom-button-danger">Danger</button>
             <button class="custom-button custom-button-info">Info</button>
             <button class="custom-button" disabled>Disabled</button>
-            <a class="custom-button" href="https://github.com/KarmaScripter/BudgetWeb" target="_blank" target="_blank">Hyperlink</a>
+            <a class="custom-button" href="https://github.com/KarmaScripter/BudgetWeb/" target="_blank" target="_blank">Hyperlink</a>
             <button class="custom-button custom-button-primary stretch-on-mobile">Stretch on Mobile</button>
         </div>
         <div class="control-group">
@@ -291,10 +297,10 @@
         </div>
         <div class="control-group">
             <button class="custom-button-flat">
-                <img src="img/home.png">
+                <img src="img/home.png" alt="">
             </button>
             <button class="custom-button-flat" disabled>
-                <img src="img/home.png">
+                <img src="img/home.png" alt="">
             </button>
             <button class="custom-button-flat small">
                 <img src="img/home.png">
@@ -343,7 +349,7 @@
             <button class="custom-button-flat">
                 <img src="img/share.png">
             </button>
-            <a class="custom-button-flat" href="https://github.com/KarmaScripter/BudgetWeb" target="_blank">
+            <a class="custom-button-flat" href="https://github.com/KarmaScripter/BudgetWeb/" target="_blank">
                 <img src="img/link.png">
             </a>
         </div>
@@ -414,7 +420,7 @@
                 <img src="img/share.png">
                 <span>Share</span>
             </button>
-            <a class="custom-button-flat" href="https://github.com/KarmaScripter/BudgetWeb" target="_blank">
+            <a class="custom-button-flat" href="https://github.com/KarmaScripter/BudgetWeb/" target="_blank">
                 <img src="img/link.png">
                 <span>Hyperlink</span>
             </a>
@@ -483,7 +489,8 @@
     </div>
 </div>
 <!--End Text with Buttons-->
-<!------------------------------------------------------------------------------------------------------------------------------------->
+
+<!------------------------------------------------------------------------------------------------->
 <!--Start Text with Images and Image buttons-->
 <div class="flex-row">
     <div class="flex-column flex-item">
@@ -501,7 +508,7 @@
         <p class="image-caption">Image Caption</p>
     </div>
     <div class="flex-column flex-item">
-        <a class="image max-width-400" href="https://github.com/KarmaScripter/BudgetWeb" target="_blank">
+        <a class="image max-width-400" href="https://github.com/KarmaScripter/BudgetWeb/" target="_blank">
             <img src="img/dummay-img.png">
         </a>
         <p class="image-caption">Image Button Caption</p>
@@ -516,7 +523,8 @@
     </div>
 </div>
 <!--End Text with Images and Image buttons-->
-<!------------------------------------------------------------------------------------------------------------------------------------->
+
+<!------------------------------------------------------------------------------------------------->
 <!--Start Text around Image-->
 <div class="flex-row">
     <div class="flex-column flex-item">
@@ -534,12 +542,14 @@
     </div>
 </div>
 <!--End Text around Image-->
-<!------------------------------------------------------------------------------------------------------------------------------------->
+
+<!------------------------------------------------------------------------------------------------->
 </div>
 </div>
 <div class="content">
 <div class="content-table flex-column">
-<!------------------------------------------------------------------------------------------------------------------------------------->
+
+<!------------------------------------------------------------------------------------------------->
 <!--Start Text with Centered Image and Table-->
 <div class="flex-row">
     <div class="flex-column flex-item">
@@ -738,7 +748,8 @@
     </div>
 </div>
 <!--End Text with Centered Image and Table-->
-<!------------------------------------------------------------------------------------------------------------------------------------->
+
+<!------------------------------------------------------------------------------------------------->
 <!--Start Text with Adaptive Image-->
 <div class="flex-row">
     <div class="flex-column flex-item">
@@ -756,12 +767,14 @@
     </div>
 </div>
 <!--End Text with Adaptive Image-->
-<!------------------------------------------------------------------------------------------------------------------------------------->
+
+<!------------------------------------------------------------------------------------------------->
 </div>
 </div>
 <div class="content">
 <div class="content-table flex-column">
-<!------------------------------------------------------------------------------------------------------------------------------------->
+
+<!------------------------------------------------------------------------------------------------->
 <!--Start Text with Images and Videos-->
 <div class="flex-row">
     <div class="flex-column flex-item">
@@ -844,7 +857,8 @@
     </div>
 </div>
 <!--End Text with Images and Videos-->
-<!------------------------------------------------------------------------------------------------------------------------------------->
+
+<!------------------------------------------------------------------------------------------------->
 <!--Start Text with Iframe-->
 <div class="flex-row">
     <div class="flex-column flex-item">
@@ -862,7 +876,8 @@
     </div>
 </div>
 <!--END Text with Iframe-->
-<!------------------------------------------------------------------------------------------------------------------------------------->
+
+<!------------------------------------------------------------------------------------------------->
 <!--Start List of Projects-->
 <div class="flex-row">
     <div class="flex-column flex-item full-width">
@@ -907,7 +922,8 @@
     </div>
 </div>
 <!--End List of Projects-->
-<!------------------------------------------------------------------------------------------------------------------------------------->
+
+<!------------------------------------------------------------------------------------------------->
 <!--Start Gallery-->
 <div class="flex-row">
     <div class="flex-column flex-item">
@@ -1008,7 +1024,8 @@
     </div>
 </div>
 <!--End Gallery-->
-<!------------------------------------------------------------------------------------------------------------------------------------->
+
+<!------------------------------------------------------------------------------------------------->
 <!--Start Masonry-->
 <div class="flex-row">
     <div class="flex-column flex-item">
@@ -1111,7 +1128,8 @@
     </div>
 </div>
 <!--End Masonry-->
-<!------------------------------------------------------------------------------------------------------------------------------------->
+
+<!------------------------------------------------------------------------------------------------->
 <!--Start Survey-->
 <div class="flex-row">
     <div class="flex-column flex-item">
@@ -1217,7 +1235,8 @@
     </div>
 </div>
 <!--End Survey-->
-<!------------------------------------------------------------------------------------------------------------------------------------->
+
+<!------------------------------------------------------------------------------------------------->
 <!--Start Credits-->
 <div class="flex-row">
     <div class="flex-column flex-item flex-item-stretch">
@@ -1229,7 +1248,8 @@
     </div>
 </div>
 <!--End Credits-->
-<!------------------------------------------------------------------------------------------------------------------------------------->
+
+<!------------------------------------------------------------------------------------------------->
 </div>
 </div>
 <div class="footer-container"></div>
