--- a/index.html
+++ b/index.html
@@ -479,7 +479,7 @@
             <textarea class="custom-textbox stretch-on-mobile" placeholder="e.g., 15213"></textarea>
         </div>
         <div class="control-group">
-            <input class="custom-textbox stretch-on-mobile" readonly type="text" value="http://yenchiah.me/">
+            <input class="custom-textbox stretch-on-mobile" readonly type="text" value="https://github.com/KarmaScripter/BudgetWeb/">
             <textarea class="custom-textbox stretch-on-mobile" readonly>Phasellus viverra nulla ut metus varius laoreet.</textarea>
         </div>
         <p class="text">
