--- a/widgets.html
+++ b/widgets.html
@@ -1,6 +1,6 @@
 ﻿<!--
 // ******************************************************************************************
-//     Name:                    index.html
+//     Name:                    widgets.html
 //     Assembly:                Budget Execution
 //     Author:                  Terry D. Eppler
 //     Created:                 03-24-2023
@@ -8,7 +8,7 @@
 //     Last Modified By:        Terry D. Eppler
 //     Last Modified On:        05-31-2023
 // ******************************************************************************************
-// <copyright file="index.html" company="Terry Eppler">
+// <copyright file="widgets.html" company="Terry Eppler">
 //    This is a Federal Budget, Finance, and Accounting application for the
 //    US Environmental Protection Agency (US EPA).
 //    Copyright ©  2023  Terry Eppler
@@ -36,7 +36,7 @@
 //    You can contact me at:  terryeppler@gmail.com or eppler.terry@epa.gov
 // </copyright>
 // <summary>
-//  index.html
+//  widgets.html
 // </summary>
 // ***************************************************************************************** 
 -->
