--- a/embedding.html
+++ b/embedding.html
@@ -44,7 +44,7 @@
 <html>
 
 <head>
-    <title>Project Title</title>
+    <title>Budget Execution</title>
     <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" media="screen" rel="stylesheet" type="text/css"/>
     <link href="css/frame.css" media="screen" rel="stylesheet" type="text/css"/>
@@ -56,7 +56,8 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="js/menu.js"></script>
     <style>
-    .menu-embedding {
+    .menu-embedding 
+    {
       color: rgb(255, 255, 255) !important;
       opacity: 1 !important;
       font-weight: 700 !important;
