--- a/index.html
+++ b/index.html
@@ -1,49 +1,49 @@
 ﻿<!--
-// ******************************************************************************************
-//     Name:                    index.html
-//     Assembly:                Budget Execution
-//     Author:                  Terry D. Eppler
-//     Created:                 03-24-2023
-// 
-//     Last Modified By:        Terry D. Eppler
-//     Last Modified On:        05-31-2023
-// ******************************************************************************************
-// <copyright company="Terry Eppler" file="index.html">
-    //    This is a Federal Budget, Finance, and Accounting application for the
-    //    US Environmental Protection Agency (US EPA).
-    //    Copyright ©  2023  Terry Eppler
-    // 
-    //    Permission is hereby granted, free of charge, to any person obtaining a copy
-    //    of this software and associated documentation files (the “Software”),
-    //    to deal in the Software without restriction,
-    //    including without limitation the rights to use,
-    //    copy, modify, merge, publish, distribute, sublicense,
-    //    and/or sell copies of the Software,
-    //    and to permit persons to whom the Software is furnished to do so,
-    //    subject to the following conditions:
-    // 
-    //    The above copyright notice and this permission notice shall be included in all
-    //    copies or substantial portions of the Software.
-    // 
-    //    THE SOFTWARE IS PROVIDED “AS IS”, WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED,
-    //    INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
-    //    FITNESS FOR A PARTICULAR PURPOSE AND NON-INFRINGEMENT.
-    //    IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM,
-    //    DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE,
-    //    ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER
-    //    DEALINGS IN THE SOFTWARE.
-    // 
-    //    You can contact me at:  terryeppler@gmail.com or eppler.terry@epa.gov
-    // </copyright>
-// <summary>
-    //  index.html
-    // </summary>
-// ***************************************************************************************** 
+    
+************************************************************************************************
+Assembly:                Budget Execution
+File:                    index.html
+Author:                  Terry D. Eppler
+Created:                 03-24-2023
+
+Last Modified By:        Terry D. Eppler
+Last Modified On:        06-15-2023
+************************************************************************************************
+<copyright company="Terry Eppler" file="index.html">
+    This is a Federal Budget, Finance, and Accounting application for the
+    US Environmental Protection Agency (US EPA).
+    Copyright ©  2023  Terry Eppler
+
+    Permission is hereby granted, free of charge, to any person obtaining a copy
+    of this software and associated documentation files (the “Software”),
+    to deal in the Software without restriction,
+    including without limitation the rights to use,
+    copy, modify, merge, publish, distribute, sublicense,
+    and/or sell copies of the Software,
+    and to permit persons to whom the Software is furnished to do so,
+    subject to the following conditions:
+
+    The above copyright notice and this permission notice shall be included in all
+    copies or substantial portions of the Software.
+
+    THE SOFTWARE IS PROVIDED “AS IS”, WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED,
+    INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
+    FITNESS FOR A PARTICULAR PURPOSE AND NON-INFRINGEMENT.
+    IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM,
+    DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE,
+    ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER
+    DEALINGS IN THE SOFTWARE.
+
+    You can contact me at:   terryeppler@gmail.com or eppler.terry@epa.gov
+</copyright>
+<summary>
+    index.html
+</summary>
+************************************************************************************************
 -->
 <!doctype html>
 <!--suppress ALL -->
 <html>
-
 <head>
     <title>Budget Execution</title>
     <meta charset="utf-8" content="width=device-width, initial-scale=1" name="viewport">
@@ -66,7 +66,6 @@
         }
     </style>
 </head>
-
 <body>
 <div class="menu-container"></div>
 <div class="content-container">
@@ -87,11 +86,9 @@
     </div>
 </div>
 <!--End Header-->
-
 <!------------------------------------------------------------------------------------------------->
 <div class="content">
 <div class="content-table flex-column">
-
 <!------------------------------------------------------------------------------------------------->
 <!--Start Intro-->
 <div class="flex-row">
@@ -166,9 +163,7 @@
     </div>
 </div>
 <!--End Intro-->
-
 <!------------------------------------------------------------------------------------------------->
-
 <!------------------------------------------------------------------------------------------------->
 <!--Start Text Only-->
 <div class="flex-row">
@@ -269,7 +264,6 @@
     </div>
 </div>
 <!--End Text Only-->
-
 <!------------------------------------------------------------------------------------------------->
 <!--Start Text with Buttons-->
 <div class="flex-row">
@@ -489,7 +483,6 @@
     </div>
 </div>
 <!--End Text with Buttons-->
-
 <!------------------------------------------------------------------------------------------------->
 <!--Start Text with Images and Image buttons-->
 <div class="flex-row">
@@ -523,7 +516,6 @@
     </div>
 </div>
 <!--End Text with Images and Image buttons-->
-
 <!------------------------------------------------------------------------------------------------->
 <!--Start Text around Image-->
 <div class="flex-row">
@@ -542,13 +534,11 @@
     </div>
 </div>
 <!--End Text around Image-->
-
 <!------------------------------------------------------------------------------------------------->
 </div>
 </div>
 <div class="content">
 <div class="content-table flex-column">
-
 <!------------------------------------------------------------------------------------------------->
 <!--Start Text with Centered Image and Table-->
 <div class="flex-row">
@@ -748,7 +738,6 @@
     </div>
 </div>
 <!--End Text with Centered Image and Table-->
-
 <!------------------------------------------------------------------------------------------------->
 <!--Start Text with Adaptive Image-->
 <div class="flex-row">
@@ -767,13 +756,11 @@
     </div>
 </div>
 <!--End Text with Adaptive Image-->
-
 <!------------------------------------------------------------------------------------------------->
 </div>
 </div>
 <div class="content">
 <div class="content-table flex-column">
-
 <!------------------------------------------------------------------------------------------------->
 <!--Start Text with Images and Videos-->
 <div class="flex-row">
@@ -857,7 +844,6 @@
     </div>
 </div>
 <!--End Text with Images and Videos-->
-
 <!------------------------------------------------------------------------------------------------->
 <!--Start Text with Iframe-->
 <div class="flex-row">
@@ -876,7 +862,6 @@
     </div>
 </div>
 <!--END Text with Iframe-->
-
 <!------------------------------------------------------------------------------------------------->
 <!--Start List of Projects-->
 <div class="flex-row">
@@ -922,7 +907,6 @@
     </div>
 </div>
 <!--End List of Projects-->
-
 <!------------------------------------------------------------------------------------------------->
 <!--Start Gallery-->
 <div class="flex-row">
@@ -1024,7 +1008,6 @@
     </div>
 </div>
 <!--End Gallery-->
-
 <!------------------------------------------------------------------------------------------------->
 <!--Start Masonry-->
 <div class="flex-row">
@@ -1128,7 +1111,6 @@
     </div>
 </div>
 <!--End Masonry-->
-
 <!------------------------------------------------------------------------------------------------->
 <!--Start Survey-->
 <div class="flex-row">
@@ -1235,7 +1217,6 @@
     </div>
 </div>
 <!--End Survey-->
-
 <!------------------------------------------------------------------------------------------------->
 <!--Start Credits-->
 <div class="flex-row">
@@ -1248,12 +1229,10 @@
     </div>
 </div>
 <!--End Credits-->
-
 <!------------------------------------------------------------------------------------------------->
 </div>
 </div>
 <div class="footer-container"></div>
 </div>
 </body>
-
 </html>
