--- a/index.html
+++ b/index.html
@@ -166,9 +166,6 @@ Last Modified On:        06-15-2023
     </div>
 </div>
 <!------------------------------------------------------------------------------------------------->
-<!----------------------------------------  End Intro  -------------------------------------------->
-<!------------------------------------------------------------------------------------------------->
-<!------------------------------------------------------------------------------------------------->
 <!---------------------------------------  Start Text Only  --------------------------------------->
 <!------------------------------------------------------------------------------------------------->
 <div class="flex-row">
@@ -268,7 +265,8 @@ Last Modified On:        06-15-2023
         </p>
     </div>
 </div>
-<!--End Text Only-->
+<!------------------------------------------------------------------------------------------------->
+<!--------------------            Start Text with Buttons   --------------------------------------->
 <!------------------------------------------------------------------------------------------------->
 <!--Start Text with Buttons-->
 <div class="flex-row">
@@ -487,9 +485,9 @@ Last Modified On:        06-15-2023
         </p>
     </div>
 </div>
-<!--End Text with Buttons-->
 <!------------------------------------------------------------------------------------------------->
-<!--Start Text with Images and Image buttons-->
+<!--------------------Start Text with Images and Image buttons------------------------------------->
+<!------------------------------------------------------------------------------------------------->
 <div class="flex-row">
     <div class="flex-column flex-item">
         <h2 id="images-and-image-button">Images and Image Button</h2>
@@ -520,9 +518,9 @@ Last Modified On:        06-15-2023
         </p>
     </div>
 </div>
-<!--End Text with Images and Image buttons-->
 <!------------------------------------------------------------------------------------------------->
-<!--Start Text around Image-->
+<!---------------------------   Start Text around Image   ----------------------------------------->
+<!------------------------------------------------------------------------------------------------->
 <div class="flex-row">
     <div class="flex-column flex-item">
         <h2 id="text-around-image">Text around Image</h2>
@@ -545,7 +543,8 @@ Last Modified On:        06-15-2023
 <div class="content">
 <div class="content-table flex-column">
 <!------------------------------------------------------------------------------------------------->
-<!--Start Text with Centered Image and Table-->
+<!----------------------Start Text with Centered Image and Tabl------------------------------------>
+<!------------------------------------------------------------------------------------------------->
 <div class="flex-row">
     <div class="flex-column flex-item">
         <h2 class="no-top-margin" id="centered-image-and-table">Centered Image and Table</h2>
@@ -742,9 +741,9 @@ Last Modified On:        06-15-2023
         </p>
     </div>
 </div>
-<!--End Text with Centered Image and Table-->
 <!------------------------------------------------------------------------------------------------->
-<!--Start Text with Adaptive Image-->
+<!-------------------------Start Text with Adaptive Image------------------------------------------>
+<!------------------------------------------------------------------------------------------------->
 <div class="flex-row">
     <div class="flex-column flex-item">
         <h2 id="adaptive-image">Adaptive Image</h2>
@@ -767,7 +766,8 @@ Last Modified On:        06-15-2023
 <div class="content">
 <div class="content-table flex-column">
 <!------------------------------------------------------------------------------------------------->
-<!--Start Text with Images and Videos-->
+<!---------------------------Start Text with Images and Videos------------------------------------->
+<!------------------------------------------------------------------------------------------------->
 <div class="flex-row">
     <div class="flex-column flex-item">
         <h2 class="no-top-margin" id="text-with-images-and-videos">Text with Images and Videos</h2>
@@ -848,9 +848,9 @@ Last Modified On:        06-15-2023
         </p>
     </div>
 </div>
-<!--End Text with Images and Videos-->
 <!------------------------------------------------------------------------------------------------->
-<!--Start Text with Iframe-->
+<!-----------------------------------Start Text with Iframe---------------------------------------->
+<!------------------------------------------------------------------------------------------------->
 <div class="flex-row">
     <div class="flex-column flex-item">
         <h2 id="iframe">Iframe</h2>
@@ -866,9 +866,9 @@ Last Modified On:        06-15-2023
         </p>
     </div>
 </div>
-<!--END Text with Iframe-->
 <!------------------------------------------------------------------------------------------------->
-<!--Start List of Projects-->
+<!-----------------------------------Start List of Projects---------------------------------------->
+<!------------------------------------------------------------------------------------------------->
 <div class="flex-row">
     <div class="flex-column flex-item full-width">
         <h2 id="list-of-projects">List of Projects</h2>
@@ -911,9 +911,9 @@ Last Modified On:        06-15-2023
         </p>
     </div>
 </div>
-<!--End List of Projects-->
 <!------------------------------------------------------------------------------------------------->
-<!--Start Gallery-->
+<!-----------------------------------------Start Gallery------------------------------------------->
+<!------------------------------------------------------------------------------------------------->
 <div class="flex-row">
     <div class="flex-column flex-item">
         <h2 id="gallery">Gallery (responsive size)</h2>
@@ -1012,9 +1012,9 @@ Last Modified On:        06-15-2023
         </p>
     </div>
 </div>
-<!--End Gallery-->
 <!------------------------------------------------------------------------------------------------->
-<!--Start Masonry-->
+<!---------------------------------------Start Masonry--------------------------------------------->
+<!------------------------------------------------------------------------------------------------->
 <div class="flex-row">
     <div class="flex-column flex-item">
         <h2 id="masonry">Masonry (responsive size)</h2>
@@ -1115,9 +1115,9 @@ Last Modified On:        06-15-2023
         </p>
     </div>
 </div>
-<!--End Masonry-->
 <!------------------------------------------------------------------------------------------------->
-<!--Start Survey-->
+<!---------------------------------------Start Survey---------------------------------------------->
+<!------------------------------------------------------------------------------------------------->
 <div class="flex-row">
     <div class="flex-column flex-item">
         <h2 id="survey">Survey</h2>
@@ -1221,9 +1221,9 @@ Last Modified On:        06-15-2023
         </p>
     </div>
 </div>
-<!--End Survey-->
 <!------------------------------------------------------------------------------------------------->
-<!--Start Credits-->
+<!--------------------------------------Start Credits---------------------------------------------->
+<!------------------------------------------------------------------------------------------------->
 <div class="flex-row">
     <div class="flex-column flex-item flex-item-stretch">
         <p class="add-top-margin-large text text-italic text-small">
